--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -59,38 +59,32 @@ stage('Checkout') {
       }
     }
 stage('Update Kubernetes Manifest') {
-    agent any
-    environment {
-        GIT_REPO_NAME = "Jenkins-CICD-Pipeline"
-        GIT_USER_NAME = "eklavya2117"
+  steps {
+    withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
+      sh '''
+        set -e
+
+        echo "Workspace: $WORKSPACE"
+
+        # FIX Git dubious ownership
+        git config --global --add safe.directory "$WORKSPACE"
+
+        git checkout main
+
+        git pull origin main
+
+        git config user.email "chauhan.pravin.7112@gmail.com"
+        git config user.name "Pravin"
+
+        sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" \
+          java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+
+        git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+        git commit -m "Update image tag to ${BUILD_NUMBER}"
+        git push https://${GITHUB_TOKEN}@github.com/eklavya2117/Jenkins-CICD-Pipeline.git HEAD:main
+      '''
     }
-    steps {
-        withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
-            sh '''
-                set -e
-                echo "Workspace: $WORKSPACE"
-
-                git config --global --add safe.directory $WORKSPACE
-
-                # 🔥 FIX: move from detached HEAD to main
-                git checkout main
-
-                git pull origin main
-
-                git config user.email "chauhan.pravin.7112@gmail.com"
-                git config user.name "Pravin"
-
-                sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" \
-                  java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-
-                git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-
-                git commit -m "Update image tag to ${BUILD_NUMBER}"
-
-                git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME}.git main
-            '''
-        }
-    }
+  }
 }
 }
 }
